--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -9,6 +9,66 @@
 		},
 		{
 			"type": "dub",
+			"run": false,
+			"compiler": "ldc2",
+			"archType": "x86_64",
+			"buildType": "debug-app",
+			"configuration": "application",
+			"_generated": false,
+			"problemMatcher": [
+				"$dmd"
+			],
+			"group": "build",
+			"label": "dub: Build debug learn-vulkan",
+			"detail": "dub build --compiler=ldc2 -a=x86_64 -b=debug-app -c=application"
+		},
+		{
+			"type": "dub",
+			"run": false,
+			"compiler": "ldc2",
+			"archType": "x86_64",
+			"buildType": "unittest",
+			"configuration": "application",
+			"_generated": false,
+			"problemMatcher": [
+				"$dmd"
+			],
+			"group": "build",
+			"label": "dub: Build unittest learn-vulkan",
+			"detail": "dub build --compiler=ldc2 -a=x86_64 -b=unittest -c=application"
+		},
+		{
+			"type": "dub",
+			"run": false,
+			"compiler": "ldc2",
+			"archType": "x86_64",
+			"buildType": "release-app",
+			"configuration": "application",
+			"_generated": false,
+			"problemMatcher": [
+				"$dmd"
+			],
+			"group": "build",
+			"label": "dub: Build release learn-vulkan",
+			"detail": "dub build --compiler=ldc2 -a=x86_64 -b=release-app -c=application"
+		},
+		{
+			"type": "dub",
+			"run": false,
+			"compiler": "ldc2",
+			"archType": "x86_64",
+			"buildType": "unittest-opt",
+			"configuration": "application",
+			"_generated": false,
+			"problemMatcher": [
+				"$dmd"
+			],
+			"group": "build",
+			"label": "dub: Build unittest-opt learn-vulkan",
+			"detail": "dub build --compiler=ldc2 -a=x86_64 -b=unittest-opt -c=application"
+		},
+		{
+			"type": "dub",
 			"run": true,
 			"compiler": "ldc2",
 			"archType": "x86_64",
@@ -27,6 +87,21 @@
 			"run": true,
 			"compiler": "ldc2",
 			"archType": "x86_64",
+			"buildType": "unittest",
+			"configuration": "application",
+			"_generated": false,
+			"problemMatcher": [
+				"$dmd"
+			],
+			"group": "build",
+			"label": "dub: Run unittest learn-vulkan",
+			"detail": "dub run --compiler=ldc2 -a=x86_64 -b=unittest -c=application"
+		},
+		{
+			"type": "dub",
+			"run": true,
+			"compiler": "ldc2",
+			"archType": "x86_64",
 			"buildType": "release-app",
 			"configuration": "application",
 			"_generated": false,
@@ -36,6 +111,21 @@
 			"group": "build",
 			"label": "dub: Run release learn-vulkan",
 			"detail": "dub run --compiler=ldc2 -a=x86_64 -b=release-app -c=application"
+		},
+		{
+			"type": "dub",
+			"run": true,
+			"compiler": "ldc2",
+			"archType": "x86_64",
+			"buildType": "unittest",
+			"configuration": "application",
+			"_generated": false,
+			"problemMatcher": [
+				"$dmd"
+			],
+			"group": "build",
+			"label": "dub: Run unittest-opt learn-vulkan",
+			"detail": "dub run --compiler=ldc2 -a=x86_64 -b=unittest-opt -c=application"
 		}
 	]
 }
