--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "dependencies/glfw"]
 	path = dependencies/glfw
 	url = git@github.com:glfw/glfw.git
+[submodule "dependencies/assimp"]
+	path = dependencies/assimp
+	url = git@github.com:assimp/assimp.git
